--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>KyawSwalin</title>
 </head>
 <body>
-    Welcome to Zero to Pro level-4 Batch-13
+    Welcome to Zero to Pro level-4 Batch-13<br>
+    <a href="a1/index.html" target="_blank" rel="noopener noreferrer">Assignment-1</a>
 </body>
 </html>
