--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KyawSwalin</title>
+    <title style="color: red;">KyawSwalin</title>
 </head>
 <body>
     Welcome to Zero to Pro level-4 Batch-13<br>
