--- a/a1/index.html
+++ b/a1/index.html
@@ -5,9 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-1</title>
+    <style>
+        .d-class{
+            color: cyan;
+            font-weight: bold;
+            text-shadow: 1pt 2pt 2pt;
+        }
+        p{
+            font-size: large;
+            font-family: Arial, Helvetica, sans-serif;
+            color: blueviolet;
+        }
+    </style>
 </head>
 <body>
     <a href="../index.html">Home</a><br>
     Assignment-1
+    <!-- Introduction -->
+    <p align="center">Hello mate!</p>
+    <div align="center" class="d-class">
+        <span>Hey mate! How it is going?</span>
+    </div>
 </body>
 </html>
