--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     Welcome to Zero to Pro level-4 Batch-13<br>
     <a href="a1/index.html" target="_blank" rel="noopener noreferrer">Assignment-1</a>
+    <a href="HTML/head.html" target="-blank" rel="noopener noreferrer">HTML</a>
 </body>
 </html>
