--- a/HTML/Link/pages/services.html
+++ b/HTML/Link/pages/services.html
@@ -29,7 +29,7 @@
   </nav>
   <header>
     <h1>This is Services Page.</h1>
-    <img src="../images/services.webp" alt="Home Page" width="40%" height="auto">
+    <img src="../images/services.webp" alt="Home Page" width="500px" height="300px">
   </header>
      <div>
         <h2>This is a paragraph.</h2>
