--- a/HTML/Link/index.html
+++ b/HTML/Link/index.html
@@ -29,7 +29,7 @@
   </nav>
   <header>
     <h1>This is Home Page.</h1>
-    <img src="images/homepage.jpg" alt="Home Page" width="40%" height="auto">
+    <img src="images/homepage.jpg" alt="Home Page" width="500px" height="300">
   </header>
      <div>
         <h2>This is a paragraph.</h2>
