--- a/HTML/Link/pages/about.html
+++ b/HTML/Link/pages/about.html
@@ -29,7 +29,7 @@
       </nav>
       <header>
         <h1>This is About Page.</h1>
-        <img src="../images/about.png" alt="Home Page" width="40%" height="auto">
+        <img src="../images/about.png" alt="Home Page" width="500px" height="300px">
       </header>
          <div>
             <h2>This is a paragraph.</h2>
