--- a/HTML/Link/pages/contact.html
+++ b/HTML/Link/pages/contact.html
@@ -29,7 +29,7 @@
       </nav>
       <header>
         <h1>This is Contact Page.</h1>
-        <img src="../images/contact.jpg" alt="Home Page" width="40%" height="auto">
+        <img src="../images/contact.jpg" alt="Home Page" width="500px" height="300px">
       </header>
          <div>
             <h2>This is a paragraph.</h2>
