--- a/HTML/Link/pages/services.html
+++ b/HTML/Link/pages/services.html
@@ -28,10 +28,12 @@
     <a href="contact.html">Contact</a>
   </nav>
   <header>
-    <h1>This is Services Page.</h1>
-    <img src="../images/services.webp" alt="Home Page" width="500px" height="auto">
+    <div align="center">
+      <h1>This is Services Page.</h1>
+      <img src="../images/services.webp" alt="Home Page" width="500px" height="auto">
+    </div>
   </header>
-     <div>
+     <div style="margin-left: 30px; text-align: justify;">
         <h2>This is a paragraph.</h2>
          <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum animi obcaecati eveniet corporis illum iure quam consequatur facilis a deleniti sit, repellendus ipsam quis culpa debitis consequuntur tenetur veritatis natus saepe ratione quasi enim, eaque et at? Esse, aliquam adipisci quam, iusto voluptatum ad ratione a laborum facere id magni dolore vitae velit ea similique repellendus error dicta expedita. Reprehenderit magni quos repellendus nulla nisi natus alias distinctio iure tempore similique quo sequi praesentium voluptatum ab deserunt laborum ea, eius, ut dolorum soluta! Sint, ducimus assumenda? Ipsa, vitae provident. Et, ipsa! Odio doloribus praesentium quae vitae id porro itaque provident maiores, hic velit labore quibusdam! Perferendis quo ullam sed doloremque nemo obcaecati nesciunt voluptates eaque labore, culpa tempore at saepe aspernatur fugiat repellat dolores? Est dolorem accusantium eos suscipit itaque. Facere maiores enim voluptatem dolor quisquam sapiente nesciunt, quod saepe impedit incidunt doloremque similique, corporis eveniet aperiam quo quas voluptatibus atque aut! Unde repellat dolor debitis, veniam, autem amet quidem, dolores commodi voluptatibus deserunt laborum tempore ducimus consequuntur perspiciatis libero cupiditate omnis eaque vero est iusto. Delectus unde voluptatem omnis, eaque earum nam soluta. Omnis quidem neque aliquid ipsam, obcaecati dolorum qui autem unde et beatae odit ea! Accusamus impedit ipsam fugit aliquam autem natus at, vel non corporis atque nemo rem, fugiat quos eum delectus aut officiis doloribus enim veniam? Voluptatibus laborum voluptate consequatur magni dolorem, assumenda error tempora pariatur eos dicta accusamus itaque voluptas vitae cumque velit perspiciatis accusantium, ratione officia quia quae nam eum. Repellat molestiae eum deserunt, labore repellendus suscipit, id pariatur totam debitis hic officia quas optio eos, aut et vero ad minus. Quam, ipsa, minima soluta nihil amet quaerat neque officiis nobis voluptatem molestias tenetur delectus sapiente possimus, veritatis excepturi cumque nemo quidem aperiam voluptatibus dolores dolor assumenda! Quas vitae molestiae excepturi doloremque facere!
