--- a/HTML/form.html
+++ b/HTML/form.html
@@ -25,6 +25,7 @@
         <th><button type="submit">Submit</button></tr>
         </tr>
         </table>
+        <label for="Ph-no">Phone</label>
     </form>
 </body>
 </html>
