--- a/JavaScript/intro.html
+++ b/JavaScript/intro.html
@@ -9,11 +9,20 @@
         alert('Hello World');
         document.write('<h1>Hello Javascript</h1>');
 
-        var car={name='q'};
-        console.log(car.name);
-        console.log(typeof(car));        
+        let n = 12;
+        let m = 12;
+        console.log(n);
+        console.log(n==m);
+        console.log(n!=m);
+        console.log(n===m)
+        if(n<=2){
+            console.log("Yes your are right");
+        }
+        else{
+            console.log('You ar wrong');
+        }
+       
         
-
     </script>
 </head>
 <body>
